--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,7 @@ jobs:
       run: npm run build
 
     - name: Deploy
-      # Add your deployment command here
-      run: 
-        npm run build
-        git config --global user.name "Arthur Panazolo"
-        git config --global user.email "arthur.panazolo@acad.pucrs.br"
-        git checkout -b gh-pages
-        git add .
-        git commit -m "Deploy to GitHub Pages"
-        git push origin gh-pages --force
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
